--- a/src/global.scss
+++ b/src/global.scss
@@ -26,15 +26,14 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+  font-family: 'Rubik', sans-serif !important;
 }
 
 .encabezado {
-    color: #e75a92;
+    color: #FFFFFF;
     font-weight: bold;
     font-size: 40px;
-    background-color: #ebdce2;
+    background-color: #4E8FFD;
     border-radius: 5px;
     margin: 10px;
 }
