--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -1,3 +1,16 @@
 <p>
   cuestionario works!
 </p>
+
+<div class="footer">
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6>
+        <ion-button expand="block" color="tertiary" (click)="onBackPage()">Volver</ion-button>
+      </ion-col>
+      <ion-col col-6>
+        <ion-button expand="block" color="primary" (click)="onNextPage()">Siguiente</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
