--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -23,12 +23,16 @@
   </div>
 </div>
 
+<ion-grid>
+  <ion-row>
+    <ion-col col-12>
+      <div class="centrado">
+        <ion-button color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+      </div>
+
+    </ion-col>
+  </ion-row>
+</ion-grid>
 <div class="footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col col-12>
-        <ion-button expand="block" color="primary" (click)="onNextPage()">Siguiente</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
 </div>
