--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,7 +1,14 @@
-<ion-header>
+<ion-header class="desktop-header">
   <ion-toolbar>
     <!-- <p-toast></p-toast> -->
     <p-steps [model]="menuPorPasos" [readonly]="true"></p-steps>
+  </ion-toolbar>
+</ion-header>
+
+<ion-header class="mobile-header">
+  <ion-toolbar>
+    <!-- <p-toast></p-toast> -->
+    <p-steps [model]="menuPorPasosMovil" [readonly]="true"></p-steps>
   </ion-toolbar>
 </ion-header>
 
