--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -1,5 +1,6 @@
 <ion-list>
     <h1 class="encabezado centrado">Seleccionar áreas de interés</h1>
+    <div class="centrado" id="loading"><br><ion-spinner name="lines"></ion-spinner><br></div>
     <div *ngFor="let idioma of allDataRest">
       <div *ngFor="let area of idioma.areas">
         <ion-list-header>
@@ -23,16 +24,16 @@
     </ion-select>
   </ion-item>
 </ion-list>
-
+<ion-grid>
+  <ion-row>
+    <ion-col col-6>
+      <ion-button expand="block" color="dark" (click)="onBackPage()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+    </ion-col>
+    <ion-col col-6>
+      <ion-button expand="block" color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 <div class="footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6>
-        <ion-button expand="block" color="tertiary" (click)="onBackPage()">Volver</ion-button>
-      </ion-col>
-      <ion-col col-6>
-        <ion-button expand="block" color="primary" (click)="onNextPage()">Siguiente</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
 </div>
