--- a/src/app/components/splash/splash.component.html
+++ b/src/app/components/splash/splash.component.html
@@ -7,7 +7,8 @@
     <div class="app-logo"></div>
     <div class="app-label">Questionnaire</div>
     <div class="app-loader"></div>
-    <div class="text-loader">Loading data...</div>
+    <div class="text-loader" id="loadingtext">Loading data...</div>
+    <div class="api-failed" id="error">Ocurrió un fallo. Compruebe su conexión y reinicie la aplicación.</div>
     <ion-progress-bar type="indeterminate"></ion-progress-bar>
   </div>
 </div>
