--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -1,16 +1,52 @@
-<p>
-  cuestionario works!
-</p>
+<div class="tab group">
+  <div class="tab">
+    <div *ngFor="let idioma of ticketService.ticketInformation.data.allDataRest">
+      <div *ngFor="let area of idioma.areas">
+        <div *ngFor="let cat of area.categorias">
+          <label for="tab-one" >
+            <p> <b>{{ cat.nombre }} </b> {{ cat.descripcion }}</p>
+          </label>
+          <!--Questions down below-->
+          <div class="tab-content">
+            <div *ngFor="let pregunta of cat.preguntas">
+              <ion-list>
+                <ion-radio-group allow-empty-selection="false" (ionChange)="respuestaGroupChange($event.detail.value, pregunta)">
+                  <ion-list-header>
+                    <ion-label>
+                      <p class="question">{{ pregunta.pregunta }} </p>
+                    </ion-label>
+                  </ion-list-header>
+                  <!--Answers down below-->
+                      <div *ngFor="let respuesta of pregunta.respuestas">
+                        <ion-item (click)="showRec(pregunta.recomendacion)">
+                          <ion-label>{{ respuesta.respuesta.respuesta }}</ion-label>
+                          <ion-radio [value]="respuesta"></ion-radio>
+                        </ion-item>
+                      </div>
+                </ion-radio-group>
+              </ion-list>
+            </div>
+          </div>
+        </div>
 
-<div class="footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6>
-        <ion-button expand="block" color="tertiary" (click)="onBackPage()">Volver</ion-button>
-      </ion-col>
-      <ion-col col-6>
-        <ion-button expand="block" color="primary" (click)="onNextPage()">Siguiente</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      </div>
+
+    </div>
+  </div>
 </div>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-6>
+          <ion-button expand="block" color="dark" (click)="onBackPage()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+        </ion-col>
+        <ion-col col-6>
+            <ion-button expand="block" color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
