--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -27,16 +27,18 @@
   </ion-item>
 </ion-list>
 
-<div class="sticky-footer">
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6>
-        <ion-button expand="block" color="dark" (click)="onBackPage()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
-      </ion-col>
-      <ion-col col-6>
-          <ion-button expand="block" color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-6>
+          <ion-button expand="block" color="dark" (click)="onBackPage()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+        </ion-col>
+        <ion-col col-6>
+            <ion-button expand="block" color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
 
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
