--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -13,11 +13,11 @@
   <div class="margin10">
     <ion-item>
       <ion-label>Selecciona un idioma</ion-label>
-      <ion-select [value]="ticketService.ticketInformation.explicacion.idioma" (ionChange)="onIdiomaSelectChange($event.target.value)">
-        <ion-select-option value="español">Español</ion-select-option>
+      <ion-select [value]="ticketService.ticketInformation.explicacion.idiomaSeleccionado.nombre" (ionChange)="onIdiomaSelectChange($event.target.value)">
+        <ion-select-option value="Español">Español</ion-select-option>
         <ion-select-option value="ingles">Inglés</ion-select-option>
         <ion-select-option value="aleman">Alemán</ion-select-option>
-        <ion-select-option value="italiano">Italiano</ion-select-option>
+        <ion-select-option value="Italiano">Italiano</ion-select-option>
       </ion-select>
     </ion-item>
   </div>
