fixed button footer

--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -1,27 +1,47 @@
-<div>
-  <h1 class="encabezado centrado">Escaneo Rápido: Instrucciones</h1>
-  <div class="magin10">
-    <h2>El Análisis Rápido se agrupa en cuatro temas (grupos temáticos):</h2>
-    <ol>
-      <li>Visión y política</li>
-      <li>Organización</li>
-      <li>Estudiante</li>
-      <li>Profesor</li>
-    </ol>
-    <p>Cada tema está dividido en cuatro áreas de atención (16 áreas de atención en total)</p>
+<!-- Estructurar contenido en ion content e ion header -->
+<ion-app>
+  <div>
+    <h1 class="encabezado centrado">Escaneo Rápido: Instrucciones</h1>
+    <div class="magin10">
+      <h2>El Análisis Rápido se agrupa en cuatro temas (grupos temáticos):</h2>
+      <ol>
+        <li>Visión y política</li>
+        <li>Organización</li>
+        <li>Estudiante</li>
+        <li>Profesor</li>
+      </ol>
+      <p>Cada tema está dividido en cuatro áreas de atención (16 áreas de atención en total)</p>
+    </div>
+    <div class="margin10">
+      <ion-item>
+        <ion-label>Selecciona un idioma</ion-label>
+        <ion-select [value]="ticketService.ticketInformation.explicacion.idiomaSeleccionado.nombre" (ionChange)="onIdiomaSelectChange($event.target.value)">
+          <ion-select-option value="Español">Español</ion-select-option>
+          <ion-select-option value="ingles">Inglés</ion-select-option>
+          <ion-select-option value="aleman">Alemán</ion-select-option>
+          <ion-select-option value="Italiano">Italiano</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </div>
   </div>
-  <div class="margin10">
-    <ion-item>
-      <ion-label>Selecciona un idioma</ion-label>
-      <ion-select [value]="ticketService.ticketInformation.explicacion.idiomaSeleccionado.nombre" (ionChange)="onIdiomaSelectChange($event.target.value)">
-        <ion-select-option value="Español">Español</ion-select-option>
-        <ion-select-option value="ingles">Inglés</ion-select-option>
-        <ion-select-option value="aleman">Alemán</ion-select-option>
-        <ion-select-option value="Italiano">Italiano</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </div>
-</div>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-12>
+            <div class="centrado">
+              <ion-button color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+            </div>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+    </ion-toolbar>
+  </ion-footer>
+
+</ion-app>
+
 
 <!--<ion-grid>
   <ion-row>
@@ -31,18 +51,3 @@
     </ion-col>
   </ion-row>
 </ion-grid>-->
-<ion-footer>
-  <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col col-12>
-          <div class="centrado">
-            <ion-button color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
-          </div>
-
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-  </ion-toolbar>
-</ion-footer>
