--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -1,4 +1,36 @@
-<div class="tab group">
+<ion-app>
+  <ion-content>
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="12" size-md="8">
+          <p>Centrado</p>
+
+
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-6>
+            <ion-button expand="block" color="dark" (click)="onBackPage()"
+              ><ion-icon name="arrow-back-outline"></ion-icon
+            ></ion-button>
+          </ion-col>
+          <ion-col col-6>
+            <ion-button expand="block" color="primary" (click)="onNextPage()"
+              ><ion-icon name="arrow-forward-outline"></ion-icon
+            ></ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
+  </ion-footer>
+</ion-app>
+
+<!-- <div class="tab group">
   <div class="tab">
     <div *ngFor="let idioma of ticketService.ticketInformation.data.allDataRest">
       <div *ngFor="let area of idioma.areas">
@@ -6,7 +38,7 @@
           <label for="tab-one" >
             <p> <b>{{ cat.nombre }} </b> {{ cat.descripcion }}</p>
           </label>
-          <!--Questions down below-->
+          Questions down below
           <div class="tab-content">
             <div *ngFor="let pregunta of cat.preguntas">
               <ion-list>
@@ -16,7 +48,7 @@
                       <p class="question">{{ pregunta.pregunta }} </p>
                     </ion-label>
                   </ion-list-header>
-                  <!--Answers down below-->
+                  Answers down below
                       <div *ngFor="let respuesta of pregunta.respuestas">
                         <ion-item (click)="showRec(pregunta.recomendacion)">
                           <ion-label>{{ respuesta.respuesta.respuesta }}</ion-label>
@@ -33,20 +65,4 @@
 
     </div>
   </div>
-</div>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col col-6>
-          <ion-button expand="block" color="dark" (click)="onBackPage()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
-        </ion-col>
-        <ion-col col-6>
-            <ion-button expand="block" color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
-
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-toolbar>
-</ion-footer>
+</div> -->
