--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -3,6 +3,8 @@
   <ion-toolbar>
     <!-- <p-toast></p-toast> -->
     <p-steps [model]="menuPorPasos" [readonly]="true"></p-steps>
+
+    <p-steps></p-steps>
   </ion-toolbar>
 </ion-header>
 
