--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -16,7 +16,7 @@
       <ion-item>
         <ion-label>Selecciona un idioma</ion-label>
         <ion-select [value]="ticketService.ticketInformation.explicacion.idiomaSeleccionado.nombre" (ionChange)="onIdiomaSelectChange($event.target.value)">
-          <ion-select-option *ngFor="let idioma of ticketService.ticketInformation.data.idiomasExistentes" [value]="idioma">{{idioma}}</ion-select-option>
+          <ion-select-option *ngFor="let idioma of ticketService.ticketInformation.data.idiomasDisponibles" [value]="idioma">{{idioma}}</ion-select-option>
         </ion-select>
       </ion-item>
     </div>
@@ -29,14 +29,11 @@
             <div class="centrado">
               <ion-button color="primary" (click)="onNextPage()"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
             </div>
-
           </ion-col>
         </ion-row>
       </ion-grid>
-
     </ion-toolbar>
   </ion-footer>
-
 </ion-app>
 
 
