--- a/src/app/main/cuestionario/cuestionario.component.scss
+++ b/src/app/main/cuestionario/cuestionario.component.scss
@@ -62,3 +62,15 @@ ion-item ion-label{
   text-align: center;
   padding: 10px;
 }
+
+.question{
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+.answer{
+  font-size: 16px;
+}
