--- a/src/app/main/cuestionario/cuestionario.component.html
+++ b/src/app/main/cuestionario/cuestionario.component.html
@@ -3,38 +3,45 @@
     <ion-grid>
       <ion-row class="ion-justify-content-center">
         <ion-col size="12" size-md="10">
-          <div *ngFor="let idioma of ticketService.ticketInformation.data.allDataRest">
+          <div *ngFor="
+              let idioma of ticketService.ticketInformation.data.allDataRest
+            ">
             <div *ngFor="let area of idioma.areas">
               <div *ngFor="let cat of area.categorias">
-                <p-accordion [multiple]="true">
-                  <p-accordionTab>
-                    <ng-template pTemplate="header"><b>{{cat.nombre}}</b>| {{cat.descripcion}}</ng-template>
-                    <!-- Questions -->
-                    <ng-template pTemplate="content">
-                      <div *ngFor="let pregunta of cat.preguntas">
-                        <ion-list>
-                          <ion-radio-group allow-empty-selection="false" (ionChange)="respuestaGroupChange($event.detail.value, pregunta)">
-                            <ion-list-header>
-                              <ion-label>
-                                <p class="question">{{ pregunta.pregunta }} </p>
-                              </ion-label>
-                            </ion-list-header>
-                            <!-- Answers down below -->
-                                <div *ngFor="let respuesta of pregunta.respuestas">
-                                  <ion-item (click)="showRec(pregunta.recomendacion)">
-                                    <ion-label>
-                                      <p class="answer">{{ respuesta.respuesta.respuesta }}</p>
-                                    </ion-label>
-                                    <ion-radio [value]="respuesta"></ion-radio>
-                                  </ion-item>
-                                </div>
-                          </ion-radio-group>
-                        </ion-list>
-                      </div>
-                    </ng-template>
-                  </p-accordionTab>
-
-              </p-accordion>
+                <ng-container *ngIf="cat.isChecked">
+                  <p-accordion [multiple]="true">
+                    <p-accordionTab>
+                      <ng-template pTemplate="header"><b>{{ cat.nombre }}</b>| {{ cat.descripcion }}</ng-template>
+                      <!-- Questions -->
+                      <ng-template pTemplate="content">
+                        <div *ngFor="let pregunta of cat.preguntas">
+                          <ion-list>
+                            <ion-radio-group allow-empty-selection="false" (ionChange)="respuestaGroupChange($event.detail.value,pregunta)">
+                              <ion-list-header>
+                                <ion-label>
+                                  <p class="question">
+                                    {{ pregunta.pregunta }}
+                                  </p>
+                                </ion-label>
+                              </ion-list-header>
+                              <!-- Answers down below -->
+                              <div *ngFor="let respuesta of pregunta.respuestas">
+                                <ion-item (click)="showRec(pregunta.recomendacion)">
+                                  <ion-label>
+                                    <p class="answer">
+                                      {{ respuesta.respuesta.respuesta }}
+                                    </p>
+                                  </ion-label>
+                                  <ion-radio [value]="respuesta"></ion-radio>
+                                </ion-item>
+                              </div>
+                            </ion-radio-group>
+                          </ion-list>
+                        </div>
+                      </ng-template>
+                    </p-accordionTab>
+                  </p-accordion>
+                </ng-container>
               </div>
             </div>
           </div>
@@ -47,14 +54,14 @@
       <ion-grid>
         <ion-row>
           <ion-col col-6>
-            <ion-button expand="block" color="dark" (click)="onBackPage()"
-              ><ion-icon name="arrow-back-outline"></ion-icon
-            ></ion-button>
+            <ion-button expand="block" color="dark" (click)="onBackPage()">
+              <ion-icon name="arrow-back-outline"></ion-icon>
+            </ion-button>
           </ion-col>
           <ion-col col-6>
-            <ion-button expand="block" color="primary" (click)="onNextPage()"
-              ><ion-icon name="arrow-forward-outline"></ion-icon
-            ></ion-button>
+            <ion-button expand="block" color="primary" (click)="onNextPage()">
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
