--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -3,14 +3,15 @@
   <div>
     <h1 class="encabezado centrado">Escaneo Rápido: Instrucciones</h1>
     <div class="magin10">
-      <h2>El Análisis Rápido se agrupa en cuatro temas (grupos temáticos):</h2>
+      <h2>Para realizar el cuestionario sigue los siguientes pasos: </h2>
       <ol>
-        <li>Visión y política</li>
-        <li>Organización</li>
-        <li>Estudiante</li>
-        <li>Profesor</li>
+        <li>Escoge tu idioma</li>
+        <li>Selecciona las categorías deseadas</li>
+        <li>Indica tu perfil</li>
+        <li>Ya puedes realizar el cuestionario</li>
+        <li>Después, podrás ver los resultados</li>
       </ol>
-      <p>Cada tema está dividido en cuatro áreas de atención (16 áreas de atención en total)</p>
+      <p>Si deseas, adicionalmente podrás guardar los resultados del cuestionario en tu dispositivo.</p>
     </div>
     <div class="margin10">
       <ion-item>
