--- a/src/global.scss
+++ b/src/global.scss
@@ -28,9 +28,8 @@
 /** {
   font-family: 'Rubik', sans-serif !important;
 }*/
-
 *{
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Open Sans', sans-serif, 'primeicons' !important;
 }
 
 .encabezado {
