Fixed p-steps and ticket filter error

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -3,14 +3,13 @@
   <ion-toolbar>
     <!-- <p-toast></p-toast> -->
     <p-steps [model]="menuPorPasos" [readonly]="true"></p-steps>
-    <p-steps></p-steps>
   </ion-toolbar>
 </ion-header>
 
 <ion-header class="mobile-header">
   <ion-toolbar>
     <!-- <p-toast></p-toast> -->
-    <p-steps [model]="menuPorPasosMovil" [readonly]="true"></p-steps>
+    <p-steps [model]="menuPorPasosMovil"></p-steps>
   </ion-toolbar>
 </ion-header>
 
