--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -1,3 +1,29 @@
-<p>
-  recomendacion works!
-</p>
+<ion-app>
+  <div *ngFor="let area of this.ticketService.ticketInformation.explicacion.idiomaSeleccionado.areas">
+    <div *ngFor="let cat of area.categorias">
+      <ng-container *ngIf="cat.isChecked">
+        <div *ngFor="let pregunta of cat.preguntas">
+          <ng-container *ngIf="pregunta.puntuacionRecomendacion > pregunta.respuestaSeleccionada.puntuacion">
+            <div [innerHTML]="pregunta.recomendacion"></div>
+          </ng-container>
+        </div>
+
+      </ng-container>
+
+    </div>
+  </div>
+  <ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-12>
+          <div class="centrado">
+            <ion-button color="primary"><ion-icon name="download-outline"></ion-icon> Descargar resultados</ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
+</ion-app>
+
