--- a/src/app/main/recoleccion-datos/recoleccion-datos.component.html
+++ b/src/app/main/recoleccion-datos/recoleccion-datos.component.html
@@ -15,7 +15,7 @@
           </ion-item>
         </ion-list>
       </div>
-      <h1 class="encabezado centrado">Otros datos de interés</h1>
+      <h1 class="encabezado centrado">Seleccionar perfil</h1>
       <ion-item>
         <ion-label>Selecciona un perfil</ion-label>
         <ion-select [value]="ticketService.ticketInformation.recoleccionDatos.perfilUsuario" (ionChange)="ticketService.ticketInformation.recoleccionDatos.perfilUsuario = $event.target.value">
