--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -1,4 +1,5 @@
 <ion-app>
+  <ion-content>
   <h1 class="encabezado centrado">Resultados</h1>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
@@ -29,16 +30,16 @@
       </ion-col>
     </ion-row>
 
-    <ion-row>
-      <ion-col size="12">
-        <!-- <p-chart type="line" [data]="data"></p-chart> -->
-        <div class="card">
-          <h5>Horizontal</h5>
-          <p-chart type="horizontalBar" [data]="basicData" [options]="basicOptions"></p-chart>
-      </div>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-md="10">
+        
+         <div>    
+          <p-chart type="bar" [data]="basicData" [options]="basicOptions"></p-chart>
+        </div> 
       </ion-col>
     </ion-row>
   </ion-grid>
+</ion-content>
 
 
   <ion-footer>
