--- a/src/app/main/recomendacion/recomendacion.component.html
+++ b/src/app/main/recomendacion/recomendacion.component.html
@@ -48,7 +48,7 @@
         <ion-row>
           <ion-col col-12>
             <div class="centrado">
-              <ion-button color="primary">
+              <ion-button color="primary" (click)="downloadPDF()">
                 <ion-icon name="download-outline"></ion-icon> Descargar resultados
               </ion-button>
             </div>
