--- a/src/global.scss
+++ b/src/global.scss
@@ -39,6 +39,9 @@
     background-color: #4E8FFD;
     border-radius: 5px;
     margin: 10px;
+    box-shadow: 0px 0px 11px 3px rgba(174,174,174,1);
+    -webkit-box-shadow: 0px 0px 11px 3px rgba(174,174,174,1);
+    -moz-box-shadow: 0px 0px 11px 3px rgba(174,174,174,1);
 }
 
 .magin10{
@@ -49,6 +52,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .sticky-footer {
@@ -67,6 +71,14 @@
   width: 100%;
   color: white;
   text-align: center;
+}
+
+.txt-strong{
+  font-weight: bolder;
+}
+
+.txt-subrayado{
+  text-decoration: underline;
 }
 
 
