--- a/src/app/main/explicacion/explicacion.component.html
+++ b/src/app/main/explicacion/explicacion.component.html
@@ -1,5 +1,6 @@
 <!-- Estructurar contenido en ion content e ion header -->
 <ion-app>
+  <ion-content>
   <div>
     <h1 class="encabezado centrado">Questionnaire instructions</h1>
     <div class="magin10">
@@ -10,7 +11,7 @@
           <ion-label>1. Select a country</ion-label>
         </ion-item>
         <ion-card-content>
-          Selecciona tu país 
+          Select your country 
         </ion-card-content>
       </ion-card>
       <ion-card>
@@ -19,7 +20,7 @@
           <ion-label>2. Acredit your data</ion-label>
         </ion-item>
         <ion-card-content>
-          Select a country for the questionnaire
+          Choose a profile
         </ion-card-content>
       </ion-card>
       <ion-card>
@@ -37,7 +38,7 @@
           <ion-label>4. See your results! and export them to PDF</ion-label>
         </ion-item>
         <ion-card-content>
-          Select a country for the questionnaire
+          At the end of this questionary you will be able to download your results 
         </ion-card-content>
       </ion-card>
     </div>
@@ -52,6 +53,7 @@
       </ion-item>
     </div>
   </div>
+</ion-content>
   <ion-footer>
     <ion-toolbar>
       <ion-grid>
